src/instances/fio/snapshots/rustsat__instances__fio__dimacs__tests__cnf_body_pass.snap
---
source: src/instances/fio/dimacs.rs
expression: "1 2 0\n-3 4 5 0\n"
---
- Clause:
    lits:
      - lidx: 0
      - lidx: 2
- Clause:
    lits:
      - lidx: 5
      - lidx: 6
      - lidx: 8
