src/instances/fio/snapshots/rustsat__instances__fio__dimacs__tests__cnf_empty.snap
---
source: src/instances/fio/dimacs.rs
expression: "c test\n"
---
Parsing error: error: missing CNF header
  ╭▸ 
2 │
  ╰╴━ here
