src/instances/fio/snapshots/rustsat__instances__fio__dimacs__tests__cnf_invalid_before_header.snap
---
source: src/instances/fio/dimacs.rs
expression: "c test\nthis is an invalid line\np cnf 5 2\n1 2 0\n-3 4 5 0\n"
---
Parsing error: error: invalid cnf p-line
  ╭▸ 
2 │ this is an invalid line
  ╰╴━ here
