src/instances/fio/snapshots/rustsat__instances__fio__dimacs__tests__cnf_invalid_header.snap
---
source: src/instances/fio/dimacs.rs
expression: "p cnf five 2\n1 2 0\n-3 4 5 0\n"
---
Parsing error: error: invalid cnf p-line
  ╭▸ 
1 │ p cnf five 2
  ╰╴      ━ here
