src/instances/fio/snapshots/rustsat__instances__fio__dimacs__tests__cnf_no_header.snap
---
source: src/instances/fio/dimacs.rs
expression: "c p cnf 5 2\n1 2 0\n-3 4 5 0\n"
---
Parsing error: error: invalid cnf p-line
  ╭▸ 
2 │ 1 2 0
  ╰╴━ here
