src/instances/fio/snapshots/rustsat__instances__fio__dimacs__tests__parse_cnf_body_fail.snap
---
source: src/instances/fio/dimacs.rs
expression: "1 2 0\n-3 four 5 0\n"
---
Parsing error: error: invalid clause ending
  ╭▸ 
2 │ -3 four 5 0
  ╰╴   ━ here
